<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ctec.zipasts.ui.control.ControlFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ctec.zipasts.ui.recarga.RecargaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_recarga" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ctec.zipasts.ui.lectura.LecturaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_leer" />

    <fragment
        android:id="@+id/nav_reporte"
        android:name="com.ctec.zipasts.ui.reporte.reporte"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_control" />
    <fragment
        android:id="@+id/nav_cierre"
        android:name="com.ctec.zipasts.ui.cerrarturno.cerrarturno"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_control" />
</navigation>